# untitled_gb_game

./: CMakeLists.txt  GBDK.cmake  LICENSE  farm_city_tiles.gbr  farm_map.gbm  mountain_tiles.gbr  mountains_map.gbm  sprite_tiles.gbr
.github/workflows/: build.yml
.github/workflows/scripts/: build.sh
src/: cram.c  cram.h  main.c  mountain_map.c  mountain_map.h  mountain_tiles.c  mountain_tiles.h  rtc.h  scene_mountains.c  scene_mountains.h  scene_set_time.c  scene_set_time.h  sprite_tiles.c  sprite_tiles.h
src/maps/: mountain.h
src/maps/exported/: farm_map.c  farm_map.h  mountain_map.c  mountain_map.h
src/tiles/: mountain.h  sprite.h
src/tiles/exported/: farm_city_tiles.c  farm_city_tiles.h  mountain_tiles.c  mountain_tiles.h  sprite_tiles.c  sprite_tiles.h
